Fixing background image on mobile

--- a/source/stylesheets/components/_callout.scss
+++ b/source/stylesheets/components/_callout.scss
@@ -1,9 +1,13 @@
 .callout {
-  max-width: 35em;
+  max-width: 55em;
   margin: 0 auto;
 
   .intro-highlight {
     font-weight: bold;
+    font-size: modular-scale(2);
+  }
+  
+  .site-introduction {
     font-size: modular-scale(1);
   }
 }
